stories/Atom/Input-group/input_group.scss
@import '../../assets/scss/mixins';
@import '../../assets/scss/breakpoints';
@import '../../assets/scss/variables';

.input-group {
  &__label {
    &--default-state, &--focus-state, &--error-state, &--disabled-state {
      @extend %paragragh-font-20;
      &-error {
        font-size: $font-size-16;
        color: $color-red;
      }
      &-help {
        display: block;
        font-size: $font-size-14;
      }
    }
    &--disabled-state {
      color: $color-gray-400;
      &-help {
        color: $color-gray-400;
      }
    }
  }
  &__icon {
    display: inline-block;
    position: relative;
    width: 100%;

    &.undefined-field {
      display: none;
    }

    &.search-field {
      &::before {
        @extend %field__image;

        background-image: url(#{$img-path-Iconback}/Search_black.svg);
        content: '';
      }

      &.disabled-state {
        &::before {
          background-image: url(#{$img-path-Iconback}/Searchgray.svg);
          content: '';
        }
      }
    }
  }
  .input__controls {
    border: 2px solid $color-black;
    font-family: $Font-Family-ProximaRegular;
    box-sizing: border-box;
    font-size: $font-size-16;
    height: 46px;
    margin: $spacing-08 0;
    padding: 10px;
    width: 100%;

    &::placeholder {
      color: $color-gray-500;
    }
    &.focus-state {
      &:focus {
        box-shadow: 0 0 4px #0468b1;
      }
    }
    &.error-state {
      border: 2px solid $color-red;
    }
    &.disabled-state {
      border: 2px solid $color-gray-400;
      background-color: $color-white;
      &::placeholder {
        color: $color-gray-400;
      }
    }
    &--search {
      padding-left: 40px;
      position: relative;
    }
    &--date {
      background: url(#{$img-path-Iconback}/calender_black.svg) no-repeat left 14px bottom 12px;
      color: $color-gray-500;
      padding-left: 40px;

      &.disabled-state {
        background-image: url(#{$img-path-Iconback}/datedisabled.svg);
        color: $color-gray-400;
      }
    }
    &--textarea {
      height: auto;
      max-width: 100%;
      &.error-state {
        border: 2px solid $color-black;
      }
    }
  }
}
input[type='date']::-webkit-calendar-picker-indicator {
  appearance: none;
  left: -12px;
  opacity: 0;
  position: absolute;
}

[dir='rtl'] {
  .input-group {
    &__icon.search-field::before {
      right: 14px;
    }
    .input__controls {
      &--search {
        padding-right: 40px;
      }
      &--date {
        background: url(#{$img-path-Iconback}/calender_black.svg) no-repeat right 14px bottom 12px;
        padding-right: 40px;
        text-align: right;

        &.disabled-state {
          background-image: url(#{$img-path-Iconback}/datedisabled.svg);
        }
      }
    }
  }
  input[type='date']::-webkit-calendar-picker-indicator {
    right: 3px;
  }
}

